# WARRANTY-POC

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_report.txt
config.example/: agent.toml  system_prompt.txt
docs/: CONFIGURATION.md  OAUTH_AUTHENTICATION.md  POC_Test_Scenarios.md
src/: __init__.py  config.py
src/agent/: __init__.py  main.py
src/compute/: __init__.py  service.py
src/mcp_servers/: __init__.py  actions.py  planner.py  warranty_docs.py
src/models/: __init__.py  case_context.py
src/orchestrator/: __init__.py  warranty_orchestrator.py
src/prompts/: README.md  __init__.py  agent_system_prompt.py  planner_prompt.py
src/servers/: README.md  __init__.py  auth_middleware.py
src/servers/actions/: README.md  main.py
src/servers/actions/src/: __init__.py  crm_integration.py  payment_gateway.py  service_directory.py
src/servers/warranty/: README.md  main.py
src/servers/warranty/src/: __init__.py  api_client.py  database.py
src/tools/: __init__.py  planner.py  python_executor.py
src/utils/: test_reporter.py
tests/: README.md  direct_test.py  interactive_test.py  quick_test.py  test_cases.txt  test_compute.py  test_golden_paths.py  test_mcp_servers.py  test_scenarios.py  verify_structure.py
